# QwtRealTimeHistogram

./: .gitignore  CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  Main.cpp  README.md
right/: CMakeLists.txt  Dialogs.cpp  Dialogs.h  Main.cpp  Processor.cpp  Processor.h  Producer.cpp  Producer.h  README.md  Style.h
wrong/: README.md  RealTimeHistogram.cpp  RealTimeHistogram.h
